# Python-Crypto-Trading-Bot

./: README.md  pyproject.toml
bot/: __init__.py  config.py  runner_factory.py
bot/backtesting/: config.py  engine.py  fast_engine.py  run_backtest.py
bot/core/: event_loop_fix.py  logger.py
bot/data/: candle_normalizer.py  coinbase_client.py  historical_loader.py
bot/execution/: base.py  factory.py  live_coinbase.py  order_manager.py  simulated.py
bot/persistence/: db.py  engine.py  models.py
bot/risk/: config.py  manager.py  result.py
bot/strategies/: base.py  green_candle.py  portfolio_metrics.py  runner.py  signals.py
bot/strategies/advanced/: breakout.py  mean_reversion.py  moving_average_crossover.py  rsi_strategy.py  support_resistance_strategy.py  trend_following.py
bot/strategies/indicators/: moving_averages.py  rsi.py  support_resistance.py  volatility.py
config/backtests/: mean_reversion_sweep.json
migrations/: env.py
migrations/versions/: 06d550bb635b_initial_schema.py  4463fcb6dc74_added_analytics_column_to_trade_model.py
scripts/: db_test.py  db_test_full.py  run_sweep.py  simulated_markets.py  test_strategy.py
scripts/backtests/: run_mean_reversion_backtest.py  sweep_strategies.py
scripts/data/: fetch_coinbase_history.py  load_history.py  load_multi_history.py  test_coinbase_api.py
scripts/tests/: strategy_test.py  test_paper_mode.py  test_strategy.py
